i forgot what i added, so here's your message

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -53,13 +53,13 @@ a:link, a:visited {
 
 .footer {
     position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 99%;
-  padding: 20px;
-  background-color: #00000064;
-  color: white;
-  text-align: center;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 20px;
+    background-color: #00000064;
+    color: white;
+    text-align: center;
 }
 
 .bg1 {background-image: url(./img/001.jpg);}
